--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "scheduler": "^0.23.0"
   },
   "scripts": {
-    "start": "node backend/server.js"
+    "start": "node backend/server.js",
+    "server":"nodemon backend/server.js",
+    "client":"npm start --prefix frontend",
+    "dev":"concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -26,5 +29,9 @@
   "bugs": {
     "url": "https://github.com/GregPetropoulos/TechShop/issues"
   },
-  "homepage": "https://github.com/GregPetropoulos/TechShop#readme"
+  "homepage": "https://github.com/GregPetropoulos/TechShop#readme",
+  "devDependencies": {
+    "concurrently": "^8.1.0",
+    "nodemon": "^2.0.22"
+  }
 }
