--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   },
   "scripts": {
     "start": "node backend/server.js",
-    "server":"nodemon backend/server.js",
-    "client":"npm start --prefix frontend",
-    "dev":"concurrently \"npm run server\" \"npm run client\""
+    "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,8 @@
   "homepage": "https://github.com/GregPetropoulos/TechShop#readme",
   "devDependencies": {
     "concurrently": "^8.1.0",
+    "dotenv": "^16.1.4",
+    "install": "^0.13.0",
     "nodemon": "^2.0.22"
   }
 }
