--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.2",
     "js-tokens": "^4.0.0",
     "loose-envify": "^1.4.0",
+    "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.11.2",
@@ -18,7 +19,9 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "prettier": "concurrently \"prettier --check ./frontend/src\" \"prettier --check ./backend\"",
+    "format": "concurrently \"prettier --write ./frontend/src\" \"prettier --write ./backend\""
   },
   "repository": {
     "type": "git",
