--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.2",
     "js-tokens": "^4.0.0",
     "loose-envify": "^1.4.0",
+    "mongodb": "^5.6.0",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
