--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "js-tokens": "^4.0.0",
     "loose-envify": "^1.4.0",
     "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,6 +36,7 @@
   },
   "homepage": "https://github.com/GregPetropoulos/TechShop#readme",
   "devDependencies": {
+    "colors": "^1.4.0",
     "concurrently": "^8.1.0",
     "dotenv": "^16.1.4",
     "install": "^0.13.0",
