--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "main": "server.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "js-tokens": "^4.0.0",
     "loose-envify": "^1.4.0",
-    "mongodb": "^5.6.0",
-    "mongoose": "^7.3.1",
+    "mongoose": "^7.3.2",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,7 +23,9 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "prettier": "concurrently \"prettier --check ./frontend/src\" \"prettier --check ./backend\"",
-    "format": "concurrently \"prettier --write ./frontend/src\" \"prettier --write ./backend\""
+    "format": "concurrently \"prettier --write ./frontend/src\" \"prettier --write ./backend\"",
+    "data:import": "node backend/seeder.js",
+    "data:destroy": "node backend/seeder.js -d"
   },
   "repository": {
     "type": "git",
