--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "js-tokens": "^4.0.0",
+    "jsonwebtoken": "^9.0.1",
     "loose-envify": "^1.4.0",
     "mongoose": "^7.3.2",
     "prettier": "^3.0.0",
