Created a jwt secret

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,4 @@
 PORT=5000
 NODE_ENV=development
-MONGO_URI=ADD YOUR CONNECTION STRING HERE
+MONGO_URI=ADD_YOUR_CONNECTION_STRING_HERE
+JWT_SECRET=ADD_YOUR_SECRET
