--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^9.0.1",
     "loose-envify": "^1.4.0",
     "mongoose": "^7.3.2",
+    "multer": "^1.4.5-lts.1",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
