--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prettier": "concurrently \"prettier --check ./frontend/src\" \"prettier --check ./backend\"",
     "format": "concurrently \"prettier --write ./frontend/src\" \"prettier --write ./backend\"",
     "data:import": "node backend/seeder.js",
-    "data:destroy": "node backend/seeder.js -d"
+    "data:destroy": "node backend/seeder.js -d",
+    "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
     "type": "git",
