Image urls added

--- a/.env-example
+++ b/.env-example
@@ -3,3 +3,6 @@ NODE_ENV=development
 MONGO_URI=ADD_YOUR_CONNECTION_STRING_HERE
 JWT_SECRET=ADD_YOUR_SECRET
 PAYPAL_CLIENT_ID=YOUR_PAYPAL_CLIENT_ID
+CLOUD_NAME=CLOUDINARY CLOUD NAME
+CLOUDINARY_API_KEY= API KEY FROM CLOUDINARY
+API_SECRET=CLOUDINARY SECRET
