--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,18 +1,34 @@
 name: Cypress Tests
 
-on: push
+on:
+  push:
+    branches: ['main']
+  pull_request:
+    branches: ['main']
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
+        uses: actions/checkout@v6
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         uses: cypress-io/github-action@v6
         with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
           build: npm run build
           start: npm run dev
           browser: chrome
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      # - name: Cypress run
+        # with:
+        #   build: npm run build
+        #   start: npm run dev
+        #   browser: chrome
