WIP yaml and workflows

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,22 +9,34 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
       - name: Checkout
         uses: actions/checkout@v6
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - name: Install Backend Modules
+        uses: cypress-io/github-action@v6
+        with: 
+          install-command:  npm run install:backend
+          runTests: false
+      - name: Install Frontend modules
         uses: cypress-io/github-action@v6
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-          build: npm run build
-          start: npm run dev
-          browser: chrome
+          install-command: npm run install:frontend
+          runTests: false
+      - name: Run E2E tests 🧪
+        uses: cypress-io/github-action@v6
+        with:
+          # start: npm run start:frontend, npm run start:server
+          start: npm start, npm run client
+          command: npm run test
+          # =====================
+      # - name: Use Node.js ${{ matrix.node-version }}
+        # uses: actions/setup-node@v3
+        # with:
+        #   cache: 'npm'
+        #   build: npm run build
+        #   start: npm start,npm run client
+        #   wait-on: 'http://localhost:5000, http://localhost:3000'
+        #   browser: chrome
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       # - name: Cypress run
