--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Cypress run with env
+        uses: cypress-io/github-action@v6
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }} 
       - name: Install Backend Modules
         uses: cypress-io/github-action@v6
         with: 
@@ -22,11 +26,6 @@ jobs:
         with:
           install-command: npm run install:frontend
           runTests: false
-      - name: 'Create env file'
-        run: |
-          touch .env
-          echo MONGO_URI="${{ secrets.MONGO_URI }}" >> .env.production
-          cat .env
       - name: Run E2E tests 🧪
         uses: cypress-io/github-action@v6
         with:
