--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Cypress run with env
         uses: cypress-io/github-action@v6
         env:
-          MONGODB_URI: ${{ secrets.MONGODB_URI }} 
+          MONGO_URI: ${{ secrets.MONGO_URI }} 
       - name: Install Backend Modules
         uses: cypress-io/github-action@v6
         with: 
