--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,7 +17,9 @@ jobs:
         with: 
           install-command:  npm run install:backend
           runTests: false
-      - name: Cypress run with env
+          env:
+          MONGO_URI: ${{ secrets.MONGO_URI }} 
+      # - name: Cypress run with env
         uses: cypress-io/github-action@v6
         env:
           MONGO_URI: ${{ secrets.MONGO_URI }} 
