--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,22 +13,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install Backend Modules
+         uses: cypress-io/github-action@v6
+         with: 
+           install-command:  npm run install:backend
+           runTests: false
+      - name: Cypress run with env
+         uses: cypress-io/github-action@v6
+         env:
+           MONGO_URI: ${{ secrets.MONGO_URI }} 
+      - name: Install Frontend modules
         uses: cypress-io/github-action@v6
-        with: 
-          install-command:  npm run install:backend
-          runTests: false
-      # - name: Cypress run with env
-        uses: cypress-io/github-action@v6
-        env:
-          MONGO_URI: ${{ secrets.MONGO_URI }} 
-      # - name: Install Frontend modules
-      #   uses: cypress-io/github-action@v6
-      #   with:
-      #     install-command: npm run install:frontend
-      #     runTests: false
-      # - name: Run E2E tests 🧪
-      #   uses: cypress-io/github-action@v6
-      #   with:
-      #     start: npm start, npm run client
-      #     # wait-on: 'http://localhost:5000, http://localhost:3000'
-      #     command: npm run test
+         with:
+           install-command: npm run install:frontend
+           runTests: false
+      - name: Run E2E tests 🧪
+         uses: cypress-io/github-action@v6
+         with:
+           start: npm start, npm run client
+           # wait-on: 'http://localhost:5000, http://localhost:3000'
+           command: npm run test
