--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,13 +5,23 @@ on:
     branches: ['main']
   pull_request:
     branches: ['main']
+  jobs:
+    cypress-run:
+      runs-on: ubuntu-22.04
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+        # Install npm dependencies, cache them correctly
+        # and run all Cypress tests
+        - name: Cypress run
+          uses: cypress-io/github-action@v6
 
-jobs:
-  cypress-run:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+# jobs:
+#   cypress-run:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
       # - name: Install Backend Modules
       #    uses: cypress-io/github-action@v6
       #    with: 
