--- a/frontend/.github/workflows/main.yaml
+++ b/frontend/.github/workflows/main.yaml
@@ -7,7 +7,7 @@ on:
     branches: ['main']
   jobs:
     cypress-run:
-      runs-on: ubuntu-22.04
+      runs-on: ubuntu-latest
       steps:
         - name: Checkout
           uses: actions/checkout@v4
@@ -15,6 +15,8 @@ on:
         # and run all Cypress tests
         - name: Cypress run
           uses: cypress-io/github-action@v6
+          with: npm run build
+          start: npm start
 
 # jobs:
 #   cypress-run:
