--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,6 +29,8 @@ jobs:
         with:
           install-command: npm run install:frontend
           runTests: false
+      - name: Prettier Check
+        run: 'npm run prettier'
       - name: Run E2E tests 🧪
         env: 
          MONGO_URI: ${{secrets.MONGO_URI}}
