GP cypress testing (#1)
* Added E2E test for pagination

* Configuration added to e2e test and several refactors to test

* Add CI/CD Github actions workflow and scripts

* Removed comment and prettier command

* Adjusting config for yaml file for github actions.

* WIP yaml and workflows

* Changed cehckout version to 4

* Added wait on to allow time to connect to the db

* Added env file

* Added env vars to gh

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* trouble shooting

* formatting

* formatting

* Prettier should fail

* Prettier should fail

* Removed prettier to the flow

* no prettier just cypress

* Adding  prettier to the flow

* Adding  prettier to the flow fixed failure test

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -62,6 +64,7 @@
     "@storybook/react-webpack5": "^7.2.3",
     "@storybook/testing-library": "^0.2.0",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "cypress": "^13.4.0",
     "eslint-plugin-storybook": "^0.6.13",
     "msw": "^1.2.3",
     "msw-storybook-addon": "^1.8.0",
