--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,25 +44,25 @@ jobs:
         with:
           start: npm start, npm run client
           command: npm run test
-  frontend-tests:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v4
-        - name: Install Frontend modules
-          uses: cypress-io/github-action@v6
-          with:
-            install-command: npm run install:frontend
-            runTests: false
-        - name: Run Frontend UI tests 🧪
-          # uses: cypress-io/github-action@v6
-          # with:
-          uses: ../frontend/
-          with:
-            # start: npm run start:frontend
-            # command: npm run test:frontend
-            working-directory: src
-            component: true
+  # frontend-tests:
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #       - name: Checkout
+  #         uses: actions/checkout@v4
+  #       - name: Install Frontend modules
+  #         uses: cypress-io/github-action@v6
+  #         with:
+  #           install-command: npm run install:frontend
+  #           runTests: false
+  #       - name: Run Frontend UI tests 🧪
+  #         # uses: cypress-io/github-action@v6
+  #         # with:
+  #         uses: ../frontend/
+  #         with:
+  #           # start: npm run start:frontend
+  #           # command: npm run test:frontend
+  #           working-directory: src
+  #           component: true
             # 
           # steps:
     # - uses: actions/checkout@v3
