Comment out prettier  for now

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,8 +29,8 @@ jobs:
         with:
           install-command: npm run install:frontend
           runTests: false
-      - name: 'Prettier Format'
-        run: npm run prettier
+      # - name: 'Prettier Format'
+      #   run: npm run prettier
       - name: Run E2E tests 🧪
         env: 
          API_SECRET: ${{secrets.API_SECRET}}
