--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,8 +29,8 @@ jobs:
         with:
           install-command: npm run install:frontend
           runTests: false
-      # - name: 'Prettier Format'
-      #   run: npm run prettier
+      - name: 'Prettier Format'
+        run: npm run prettier
       - name: Run E2E tests 🧪
         env: 
          API_SECRET: ${{secrets.API_SECRET}}
@@ -44,29 +44,3 @@ jobs:
         with:
           start: npm start, npm run client
           command: npm run test
-  # frontend-tests:
-  #     runs-on: ubuntu-latest
-  #     steps:
-  #       - name: Checkout
-  #         uses: actions/checkout@v4
-  #       - name: Install Frontend modules
-  #         uses: cypress-io/github-action@v6
-  #         with:
-  #           install-command: npm run install:frontend
-  #           runTests: false
-  #       - name: Run Frontend UI tests 🧪
-  #         # uses: cypress-io/github-action@v6
-  #         # with:
-  #         uses: ../frontend/
-  #         with:
-  #           # start: npm run start:frontend
-  #           # command: npm run test:frontend
-  #           working-directory: src
-  #           component: true
-            # 
-          # steps:
-    # - uses: actions/checkout@v3
-    # - name: Install frontend modules
-      # run: npm run install:frontend
-    # - name: Run frontend unit tests 🧪
-      # run: npm run test:frontend:unit
